--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ li {
 	font-size: 1.2rem;
 }
 .wrapper {
-	max-width: 1280px;
+	/* max-width: 1280px; */
 	margin: 0 4% 60px 4%;
 }
 .sec-title {
@@ -35,7 +35,7 @@ header{
 	background-color: #000;
 }
 .header {
-	max-width: 1280px;
+	/* max-width: 1280px; */
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -68,7 +68,7 @@ header{
 .header ul li a:hover {
 	opacity: 0.5;
 }
-.header ul li img.icon {
+.header ul li a img.icon {
 	width: 30px;
 }
 
@@ -95,15 +95,18 @@ header{
 	margin-bottom: 3px;
 }
 .tel_btn{
-	background-color: #e8e8e8;
-	/* background-color: red; */
-	border: 1px solid #000;
-	border-radius: 4px;
-	padding: 2px 10px;
-}
-.tel_btn a{
 	font-size: 16px;
+	padding: 2px 10px;
+	background-color: #e8e8e8;
 	color: #000;
+	border-radius: 4px;
+	border: 1px solid #000;
+	transition: all .1s;
+}
+.tel_btn:hover{
+	background-color: #000;
+	color: #e8e8e8;
+	transition: all .1s;
 }
 
 /* works */
@@ -224,12 +227,14 @@ footer p{
 		height: auto;
 		line-height: 40px;
 	}
-	.header li {
-		font-size: 0.8rem;
+	.header nav ul li:nth-child(n+1){
+		margin-left:0;
+	}
+	.header nav ul li:nth-child(n+2){
 		margin-left: 20px;
 	}
-	.header li img.icon {
-		width: 20px;
+	.header nav ul li img.icon {
+		width: 24px;
 		margin-top: 15px;
 	}
 	#main img {
