横スクロールバー対応

--- a/style.css
+++ b/style.css
@@ -7,11 +7,6 @@
 	box-sizing: border-box;
 	text-decoration: none;
 }
-
-body{
-
-}
-
 p {
 	font-size: 1.3rem;
 	/* rootemの略、デフォ16pxだから */
@@ -20,8 +15,7 @@ li {
 	list-style: none;
 	font-size: 1.2rem;
 }
-section{
-
+.container{
 	overflow:hidden;
 }
 .wrapper {
@@ -94,7 +88,7 @@ header{
 
 /***** about *****/
 #about{
-	transform: translateX(100%);
+	transform: translateX(50%);
 	opacity: 0;
 }
 #about.rightSlide{
@@ -140,7 +134,7 @@ header{
 
 /***** works *****/
 #works{
-	transform: translateX(-100%);
+	transform: translateX(-50%);
 	opacity: 0;
 }
 #works.leftSlide{
@@ -151,9 +145,7 @@ header{
 #works ul {
 	display: flex;
 	flex-wrap: wrap;
-	/* justify-content: space-between; */
 	flex-direction: row;
-	/* margin-bottom: 50px; */
 }
 #works ul li {
 	width: 32%;
@@ -176,7 +168,7 @@ header{
 
 /***** news *****/
 #news{
-	transform: translateX(100%);
+	transform: translateX(50%);
 	opacity: 0;
 }
 #news.rightSlide{
@@ -207,7 +199,7 @@ header{
 	color: #000;
 	transition: all 0.2s;
 	text-align: center;
-	transform: translateX(-100%);
+	transform: translateX(-50%);
 	opacity: 0;
 }
 #contact.leftSlide{
@@ -247,21 +239,17 @@ header{
 	transition: all 0.2s;
 }
 #contact button:hover {
-	/* background-color: #fff;
-	color: #000; */
 	opacity: .7;
 }
 /***** footer *****/
 footer{
 	height: 80px;
-	/* width: 100%; */
 	text-align: center;
 	background-color: #000;
 	color: #fff;
 	line-height: 80px;
 	padding: auto 0;
 }
-
 footer p{
 	font-size: 16px;
 }
